# brc-schema

./: .cruft.json  .env.public  .gitignore  404.html  AGENT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
AccessLimitationsEnum/: index.html
Affiliation/: index.html
AnalysisType/: index.html
AuditLog/: index.html
BRCEnum/: index.html
BRCOrganization/: index.html
Boolean/: index.html
CategoryEnum/: index.html
CitedItemType/: index.html
CollectionTypeEnum/: index.html
Contributor/: index.html
ContributorType/: index.html
ContributorTypeCodes/: index.html
Curie/: index.html
Dataset/: index.html
DatasetCollection/: index.html
DatasetThemeEnum/: index.html
DatasetTopicEnum/: index.html
DatasetTypeCodes/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Deprecated/: index.html
Double/: index.html
Float/: index.html
Funding/: index.html
GeneralPurpose/: index.html
Geolocation/: index.html
GeolocationType/: index.html
Identifier/: index.html
IdentifierType/: index.html
Individual/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
MediaFile/: index.html
MediaLocationEnum/: index.html
MediaSet/: index.html
Metabolomics/: index.html
NCBITaxID/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OntologyAnnotation/: index.html
Organism/: index.html
Organization/: index.html
OrganizationIdentifier/: index.html
OrganizationIdentifierType/: index.html
OrganizationType/: index.html
Person/: index.html
PersonType/: index.html
Plasmid/: index.html
Point/: index.html
ProductType/: index.html
Proteomics/: index.html
Record/: index.html
Records/: index.html
RelatedIdentifier/: index.html
RelatedIdentifierType/: index.html
RelatedItem/: index.html
RelationType/: index.html
RepositoryEnum/: index.html
(+305 files in other folders)
