[tool.poetry]
name = "brc_schema"
version = "0.1.4"
description = "Bioenergy Research Centers (BRC) Schema"
authors = ["J. Harry Caufield <jhc@lbl.gov>", "Chris Mungall <cjmungall@lbl.gov>"]
license = "BSD-3"
readme = "README.md"
include = ["README.md", "src/brc_schema/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.7.0"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = "^1.7.11rc1"
mkdocs-material = ">8.2.8"
mkdocs-mermaid2-plugin = ">0.6.0"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material", "mkdocs-mermaid2-plugin"]
